fix contrast errors font size

--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -6,7 +6,7 @@
   --bold-font: 700;
   --bolder-font: 900;
   --bg-color: #93e4c1;
-  --primary-color: #3baea0;
+  --primary-color: #2c786c;
   --secondary-color: #118a7e;
   --primary-shadow: #1f6f78;
   --bottom-margin: 0.5rem;
@@ -77,6 +77,7 @@ nav ul {
 
 nav ul li {
   font-weight: var(--bold-font);
+  font-size: 20px;
 }
 
 .burger-menu {
@@ -156,6 +157,11 @@ nav ul li {
   text-align: center;
   width: 50%;
   padding: 1rem;
+}
+
+.project-container a {
+  font-weight: var(--bold-font);
+  font-size: 25px;
 }
 
 .contact {
